<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="@dimen/new_card_activity_horiz_margin"
        android:layout_marginRight="@dimen/new_card_activity_horiz_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/about_logo_light"
            android:contentDescription="@string/content_desc_logo"
            android:layout_marginBottom="@dimen/about_logo_margin_bottom" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tv_version" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/copyright"
            android:id="@+id/tv_copyright"
            android:layout_marginBottom="8dp" />

        <TextView
            android:background="@drawable/about_link_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credits"
            android:clickable="true"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:id="@+id/btn_credits"
            android:padding="8dp"
            android:onClick="onCreditsClick"
            android:textStyle="bold" />


        <TextView

            android:background="@drawable/about_link_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_application"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:clickable="true"
            android:padding="8dp"
            android:id="@+id/btn_rate_app"
            android:layout_marginBottom="8dp"
            android:onClick="onRateAppClick"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/about_horizontal_rule"
            android:padding="@dimen/element_spacing"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/app_slogan"
            android:id="@+id/tv_slogan"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:gravity="center" />

        <TextView
            android:background="@drawable/about_link_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_source_licenses"
            android:clickable="true"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:id="@+id/btn_open_source_licenses"
            android:padding="8dp"
            android:onClick="onOpenSourceLicensesClick"
            android:textStyle="bold" />

        <TextView
            android:background="@drawable/about_link_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:clickable="true"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:id="@+id/btn_privacy_policy"
            android:padding="8dp"
            android:onClick="onPrivacyPolicyClick"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>